fix dropdown alignment

--- a/src/components/leafs/ActionsPanel/style.module.styl
+++ b/src/components/leafs/ActionsPanel/style.module.styl
@@ -27,7 +27,7 @@
   box-sizing: border-box;
   color: #bebebe;
   font-family: 'IBM Plex Sans';
-  top: -110px;
+  bottom: calc(100% + 6px);
   border-radius: 4px;
   border: 1px solid #ffffff26;
   // box-shadow: 0 3px 3.84px 2.16px #0c0c0c2b;
